packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/raw-runtime-throw/RawRuntimeThrowCase.java
package sample.bad;

class RawRuntimeThrowCase {
    void run() {
        throw new RuntimeException("bad");
    }
}
